added fuzz test and testing structure

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,9 @@
+add_library(parser parse.cpp)
+
 add_executable(parse main.cpp)
 target_link_libraries(
   parse
   PRIVATE
+  parser
   project_options
   project_warnings)
